todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  labels:
    app: todo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-app-deployment
    spec:
      containers:
        - name: todo-app
          image: joyboy67/todo-app:4.5
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: /app/files
              name: todo-storage
      volumes:
        - name: todo-storage
          persistentVolumeClaim:
            claimName: todo-claim
