todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-app-svc
  name: todo-app-svc
spec:
  type: NodePort
  ports:
    - port: 1234
      targetPort: 3000
  selector:
    app: todo-app-deployment
